first correct volcano plot, second plot-test